--- a/charts/kueue/templates/rbac/role.yaml
+++ b/charts/kueue/templates/rbac/role.yaml
@@ -279,6 +279,16 @@ rules:
       - kueue.x-k8s.io
     resources:
       - multikueueclusters
+    verbs:
+      - create
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
+      - kueue.x-k8s.io
+    resources:
       - multikueueconfigs
       - provisioningrequestconfigs
       - workloadpriorityclasses
@@ -309,6 +319,14 @@ rules:
       - leaderworkerset.x-k8s.io
     resources:
       - leaderworkersets
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - multicluster.x-k8s.io
+    resources:
+      - clusterprofiles
     verbs:
       - get
       - list
